kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-dashboard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-dashboard
  template:
    metadata:
      labels:
        app: devops-dashboard
    spec:
      containers:
      - name: devops-dashboard
        image: preethambr/devops-dashboard:latest
        ports:
        - containerPort: 80
