kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-dashboard-service
spec:
  type: NodePort
  selector:
    app: devops-dashboard
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30007
